--- a/app/src/main/res/layout/userinfo.xml
+++ b/app/src/main/res/layout/userinfo.xml
@@ -12,6 +12,7 @@
     app:cardCornerRadius="6dp">
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
